---
config:
  class:
    hideEmptyMembersBox: true
  theme: mc
  look: handDrawn
  layout: dagre
---
classDiagram
    direction TB
    class Frame {
    }
    class EmptyFrame {
    }
    class IncompleteFrame {
        first: Int
    }
    class StrikeFrame {
    }
    class SpareFrame {
        first: Int
        second: Int
    }
    class OpenFrame {
        first: Int
        second: Int
    }
    class CompletedFrame {
    }
    class StateFrame {
    }
    <<Trait>> Frame
    <<Object>> EmptyFrame
    <<Object>> StrikeFrame
    <<Trait>> CompletedFrame
    <<Trait>> StateFrame
    Frame <|-- StateFrame
    StateFrame <|.. EmptyFrame
    StateFrame <|.. IncompleteFrame
    Frame <|-- CompletedFrame
    CompletedFrame <|.. OpenFrame
    CompletedFrame <|.. SpareFrame
    CompletedFrame <|.. StrikeFrame
    class Frame:::Ash
    class EmptyFrame:::Peach
    class IncompleteFrame:::Peach
    class StrikeFrame:::Aqua
    class SpareFrame:::Aqua
    class OpenFrame:::Aqua
    class CompletedFrame:::Ash
    class StateFrame:::Ash
classDef Aqua :, stroke-width:1px, stroke-dasharray:none, stroke:#46EDC8, fill:#DEFFF8, color:#378E7A
classDef Peach :, stroke-width:1px, stroke-dasharray:none, stroke:#FBB35A, fill:#FFEFDB, color:#8F632D
classDef Ash :, stroke-width:1px, stroke-dasharray:none, stroke:#999999, fill:#EEEEEE, color:#000000
